Add Error page and Optimize resource references

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -36,20 +36,20 @@
 
     </script><!-- End SEO tag -->
     <!-- FAVICONS -->
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-touch-icon.png">
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="144x144" th:href="@{/assets/apple-touch-icon.png}">
+    <link rel="shortcut icon" th:href="@{assets/favicon.ico}">
     <meta name="theme-color" content="#3063A0"><!-- End FAVICONS -->
     <!-- GOOGLE FONT -->
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet"><!-- End GOOGLE FONT -->
     <!-- BEGIN PLUGINS STYLES -->
-    <link rel="stylesheet" href="assets/vendor/open-iconic/css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.css">
-    <link rel="stylesheet" href="assets/stylesheets/dropzone.css">
-    <link rel="stylesheet" href="assets/vendor/flatpickr/flatpickr.min.css"><!-- END PLUGINS STYLES -->
+    <link rel="stylesheet" th:href="@{/assets/vendor/open-iconic/css/open-iconic-bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/assets/vendor/fontawesome/css/all.css}">
+    <link rel="stylesheet" th:href="@{/assets/stylesheets/dropzone.css}">
+    <link rel="stylesheet" th:href="@{/assets/vendor/flatpickr/flatpickr.min.css}"><!-- END PLUGINS STYLES -->
     <!-- BEGIN THEME STYLES -->
-    <link rel="stylesheet" href="assets/stylesheets/theme.min.css" data-skin="default">
-    <link rel="stylesheet" href="assets/stylesheets/theme-dark.min.css" data-skin="dark">
-    <link rel="stylesheet" href="assets/stylesheets/custom.css"><!-- Disable unused skin immediately -->
+    <link rel="stylesheet" th:href="@{/assets/stylesheets/theme.min.css}" data-skin="default">
+    <link rel="stylesheet" th:href="@{/assets/stylesheets/theme-dark.min.css}" data-skin="dark">
+    <link rel="stylesheet" th:href="@{/assets/stylesheets/custom.css}"><!-- Disable unused skin immediately -->
     <script>
       var skin = localStorage.getItem('skin') || 'default';
       var unusedLink = document.querySelector('link[data-skin]:not([data-skin="' + skin + '"])');
@@ -58,6 +58,26 @@
     </script><!-- END THEME STYLES -->
 </head>
 <body>
+
+<!-- BEGIN BASE JS -->
+<script th:src="@{/assets/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/popper.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/bootstrap.min.js}"></script> <!-- END BASE JS -->
+<!-- BEGIN PLUGINS JS -->
+<script th:src="@{/assets/vendor/pace/pace.min.js}"></script>
+<script th:src="@{/assets/vendor/stacked-menu/stacked-menu.min.js}"></script>
+<script th:src="@{/assets/vendor/perfect-scrollbar/perfect-scrollbar.min.js}"></script>
+<script th:src="@{/assets/vendor/flatpickr/flatpickr.min.js}"></script>
+<script th:src="@{/assets/vendor/easy-pie-chart/jquery.easypiechart.min.js}"></script>
+<script th:src="@{/assets/vendor/chart.js/Chart.min.js}"></script>
+<!-- END PLUGINS JS -->
+
+<!-- BEGIN THEME JS -->
+<script th:src="@{/assets/javascript/theme.min.js}"></script>
+<!-- END THEME JS -->
+
+<!-- BEGIN PAGE LEVEL JS -->
+<!-- END PAGE LEVEL JS -->
 
 </body>
 </html>
