--- a/src/main/resources/templates/password-recovery.html
+++ b/src/main/resources/templates/password-recovery.html
@@ -8,7 +8,7 @@
   <form method="POST" th:object="${user}" th:action="@{/password-recovery}" class="auth-form auth-form-reflow">
     <div class="text-center mb-4">
       <div class="mb-4">
-        <img class="rounded" src="assets/apple-touch-icon.png" alt="" height="72">
+        <img class="rounded" th:src="@{/assets/apple-touch-icon.png}" alt="" height="72">
       </div>
       <h1 class="h3">Reset Your Password</h1>
     </div>
@@ -43,13 +43,13 @@
 
 
 <!-- BEGIN BASE JS -->
-<script src="assets/vendor/jquery/jquery.min.js"></script>
-<script src="assets/vendor/bootstrap/js/popper.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script th:src="@{/assets/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/popper.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/bootstrap.min.js}"></script>
 <!-- END BASE JS -->
 
 <!-- BEGIN THEME JS -->
-<script src="assets/javascript/theme.min.js"></script>
+<script th:src="@{assets/javascript/theme.min.js}"></script>
 <!-- END THEME JS -->
 </body>
 </html>
