--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -51,25 +51,26 @@
     </main><!-- /.app-main -->
 </div><!-- /.app -->
 <!-- BEGIN BASE JS -->
-<script src="assets/vendor/jquery/jquery.min.js"></script>
-<script src="assets/vendor/bootstrap/js/popper.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script> <!-- END BASE JS -->
+<script th:src="@{/assets/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/popper.min.js}"></script>
+<script th:src="@{/assets/vendor/bootstrap/js/bootstrap.min.js}"></script> <!-- END BASE JS -->
 <!-- BEGIN PLUGINS JS -->
-<script src="assets/vendor/pace/pace.min.js"></script>
-<script src="assets/vendor/stacked-menu/stacked-menu.min.js"></script>
-<script src="assets/vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-<script src="assets/vendor/flatpickr/flatpickr.min.js"></script>
-<script src="assets/vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
-<script src="assets/vendor/chart.js/Chart.min.js"></script>
+<script th:src="@{/assets/vendor/pace/pace.min.js}"></script>
+<script th:src="@{/assets/vendor/stacked-menu/stacked-menu.min.js}"></script>
+<script th:src="@{/assets/vendor/perfect-scrollbar/perfect-scrollbar.min.js}"></script>
+<script th:src="@{/assets/vendor/flatpickr/flatpickr.min.js}"></script>
+<script th:src="@{/assets/vendor/easy-pie-chart/jquery.easypiechart.min.js}"></script>
+<script th:src="@{/assets/vendor/chart.js/Chart.min.js}"></script>
 
-<script src="assets/javascript/userfile-interface.js"></script>
-<script src="assets/javascript/pages/files.js"></script>
-<script src="assets/javascript/infinite-scroll.pkgd.min.js"></script>
-
+<script th:src="@{/assets/javascript/userfile-interface.js}"></script>
+<script th:src="@{/assets/javascript/pages/files.js}"></script>
+<script th:src="@{/assets/javascript/infinite-scroll.pkgd.min.js}"></script>
 <!-- END PLUGINS JS -->
+
 <!-- BEGIN THEME JS -->
-<script src="assets/javascript/theme.min.js"></script>
+<script th:src="@{/assets/javascript/theme.min.js}"></script>
 <!-- END THEME JS -->
+
 <!-- BEGIN PAGE LEVEL JS -->
 <!-- END PAGE LEVEL JS -->
 </body>
