--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -46,6 +46,7 @@
                                                         </button>
                                                         <br><br>
                                                         <p class="text-muted">Or drag and drop files</p>
+                                                        <p class="text-muted">(Maximum file size: 50 MB)</p>
                                                     </div>
 
                                                 </form>
