--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,18 +8,115 @@
 <main class="auth">
   <header id="auth-header" class="auth-header" style="background-image: url(assets/images/illustration/img-1.png);">
     <h1>
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="64" viewBox="0 0 351 100">
-        <defs>
-          <path id="a" d="M156.538 45.644v1.04a6.347 6.347 0 0 1-1.847 3.98L127.708 77.67a6.338 6.338 0 0 1-3.862 1.839h-1.272a6.34 6.34 0 0 1-3.862-1.839L91.728 50.664a6.353 6.353 0 0 1 0-9l9.11-9.117-2.136-2.138a3.171 3.171 0 0 0-4.498 0L80.711 43.913a3.177 3.177 0 0 0-.043 4.453l-.002.003.048.047 24.733 24.754-4.497 4.5a6.339 6.339 0 0 1-3.863 1.84h-1.27a6.337 6.337 0 0 1-3.863-1.84L64.971 50.665a6.353 6.353 0 0 1 0-9l26.983-27.008a6.336 6.336 0 0 1 4.498-1.869c1.626 0 3.252.622 4.498 1.87l26.986 27.006a6.353 6.353 0 0 1 0 9l-9.11 9.117 2.136 2.138a3.171 3.171 0 0 0 4.498 0l13.49-13.504a3.177 3.177 0 0 0 .046-4.453l.002-.002-.047-.048-24.737-24.754 4.498-4.5a6.344 6.344 0 0 1 8.996 0l26.983 27.006a6.347 6.347 0 0 1 1.847 3.98zm-46.707-4.095l-2.362 2.364a3.178 3.178 0 0 0 0 4.501l2.362 2.364 2.361-2.364a3.178 3.178 0 0 0 0-4.501l-2.361-2.364z"/>
-        </defs>
-        <g fill="none" fill-rule="evenodd">
-          <path fill="currentColor" fill-rule="nonzero" d="M39.252 80.385c-13.817 0-21.06-8.915-21.06-22.955V13.862H.81V.936h33.762V58.1c0 6.797 4.346 9.026 9.026 9.026 2.563 0 5.237-.446 8.58-1.783l3.677 12.034c-5.794 1.894-9.694 3.009-16.603 3.009zM164.213 99.55V23.78h13.372l1.225 5.571h.335c4.457-4.011 10.585-6.908 16.491-6.908 13.817 0 22.174 11.031 22.174 28.08 0 18.943-11.588 29.863-23.957 29.863-4.903 0-9.694-2.117-13.594-6.017h-.446l.78 9.025V99.55h-16.38zm25.852-32.537c6.128 0 10.92-4.903 10.92-16.268 0-9.917-3.232-14.932-10.14-14.932-3.566 0-6.797 1.56-10.252 5.126v22.397c3.12 2.674 6.686 3.677 9.472 3.677zm69.643 13.372c-17.272 0-30.643-10.586-30.643-28.972 0-18.163 13.928-28.971 28.748-28.971 17.049 0 26.075 11.477 26.075 26.52 0 3.008-.558 6.017-.78 7.354h-37.663c1.56 8.023 7.465 11.589 16.491 11.589 5.014 0 9.36-1.337 14.263-3.9l5.46 9.917c-6.351 4.011-14.597 6.463-21.951 6.463zm-1.338-45.463c-6.462 0-11.031 3.454-12.702 10.363h23.622c-.78-6.797-4.568-10.363-10.92-10.363zm44.238 44.126V23.779h13.371l1.337 12.034h.334c5.46-9.025 13.595-13.371 22.398-13.371 4.902 0 7.465.78 10.697 2.228l-3.343 13.706c-3.454-1.003-5.683-1.56-9.806-1.56-6.797 0-13.928 3.566-18.608 13.483v28.749h-16.38z"/>
-          <use class="fill-warning" xlink:href="#a"/>
-        </g>
-      </svg>
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 123 960 275" style="enable-background:new 0 123 960 275;" xml:space="preserve" height="96">
+                            <style type="text/css">
+                                .st0{fill:#FFFFFF;}
+                                .st1{enable-background:new;}
+                            </style>
+        <g id="XMLID_29_">
+                                <path id="XMLID_2_" class="st0" d="M260.7,166.1c-23.1,1.6-185.6,17.1-197,128.5c-1.4,11.9-2.2,23.9-2.7,35.8l79.9-79.8
+                                    c2.8-2.8,7.3-2.8,10.1,0s2.8,7.3,0,10.1L35.1,376.6c-4.2,4.2-4.2,11,0,15.2s11,4.2,15.2,0l25.5-25.5c18.8-0.1,37.6-1.1,56.3-3.3
+                                    c23.9-2.4,43.3-11.8,59.2-25.3h-45.1l65.6-21.8c5-6.7,9.5-13.7,13.6-21h-36.2l47.6-23.8C255.5,225.5,259.9,177.9,260.7,166.1z"/>
+          <g id="XMLID_1_" class="st1">
+                                <path class="st0" d="M351.2,318.6c0,1.5-0.1,2.7-0.2,3.7c-0.1,1-0.3,1.8-0.6,2.5c-0.2,0.7-0.6,1.1-0.9,1.4
+                                    c-0.4,0.3-0.8,0.4-1.3,0.4h-43.9c-1.6,0-3-0.5-4.1-1.4c-1.1-1-1.7-2.5-1.7-4.7v-86.9c0-0.5,0.2-0.9,0.5-1.3c0.3-0.4,0.9-0.7,1.6-1
+                                    c0.7-0.2,1.7-0.4,3-0.6c1.3-0.1,2.8-0.2,4.7-0.2c1.9,0,3.5,0.1,4.7,0.2c1.2,0.1,2.2,0.3,3,0.6c0.7,0.2,1.3,0.6,1.6,1
+                                    c0.3,0.4,0.5,0.8,0.5,1.3v77h30.1c0.5,0,0.9,0.1,1.3,0.4c0.4,0.3,0.7,0.7,0.9,1.3c0.2,0.6,0.4,1.4,0.6,2.4
+                                    C351.1,315.9,351.2,317.1,351.2,318.6z"/>
+            <path class="st0" d="M381.6,235.9c0,3.7-0.8,6.3-2.3,7.8c-1.5,1.4-4.4,2.1-8.5,2.1c-4.2,0-7-0.7-8.5-2.1c-1.5-1.4-2.2-3.9-2.2-7.5
+                                    c0-3.7,0.8-6.3,2.3-7.8c1.5-1.5,4.4-2.2,8.5-2.2c4.1,0,7,0.7,8.4,2.1S381.6,232.3,381.6,235.9z M380.2,324.2
+                                    c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9c-0.7,0.2-1.7,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2c-1.8,0-3.3-0.1-4.5-0.2
+                                    c-1.2-0.1-2.1-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9s-0.4-0.8-0.4-1.3v-65.8c0-0.5,0.1-0.9,0.4-1.3s0.8-0.7,1.5-1
+                                    c0.7-0.3,1.7-0.5,2.8-0.6c1.2-0.1,2.7-0.2,4.5-0.2c1.8,0,3.3,0.1,4.5,0.2c1.2,0.1,2.1,0.4,2.8,0.6c0.7,0.3,1.2,0.6,1.5,1
+                                    s0.4,0.8,0.4,1.3V324.2z"/>
+            <path class="st0" d="M458.2,262.8c0,2.4-0.3,4.1-0.8,5.3c-0.5,1.1-1.2,1.7-2,1.7h-7.8c1.1,1.2,1.9,2.5,2.3,4
+                                    c0.5,1.5,0.7,3.1,0.7,4.7c0,3.8-0.6,7.3-1.9,10.2c-1.3,3-3.1,5.5-5.5,7.5c-2.4,2-5.3,3.6-8.7,4.7c-3.4,1.1-7.1,1.6-11.3,1.6
+                                    c-2.1,0-4.1-0.3-6.1-0.8c-1.9-0.5-3.4-1.1-4.4-1.8c-0.6,0.6-1.1,1.4-1.6,2.3c-0.5,0.9-0.7,1.9-0.7,3c0,1.4,0.6,2.6,1.9,3.5
+                                    c1.3,0.9,3,1.4,5.3,1.5l16.1,0.6c3.7,0.1,7.1,0.7,10,1.6c2.9,0.9,5.4,2.2,7.4,3.8c2,1.7,3.5,3.6,4.6,6c1.1,2.3,1.6,5,1.6,7.9
+                                    c0,3.3-0.7,6.3-2.1,9.2c-1.4,2.9-3.6,5.4-6.4,7.5c-2.9,2.1-6.4,3.8-10.8,5c-4.3,1.2-9.4,1.8-15.1,1.8c-5.6,0-10.4-0.4-14.4-1.3
+                                    c-4-0.9-7.2-2.1-9.8-3.7c-2.5-1.6-4.4-3.5-5.5-5.7c-1.2-2.2-1.7-4.6-1.7-7.2c0-1.6,0.2-3.2,0.6-4.7c0.4-1.5,1-2.9,1.8-4.3
+                                    c0.8-1.4,1.8-2.6,3-3.9c1.2-1.2,2.5-2.4,4.1-3.6c-2.1-1.1-3.8-2.7-4.9-4.6c-1.2-1.9-1.7-4.1-1.7-6.4c0-2.9,0.7-5.6,2-8
+                                    c1.3-2.4,3.1-4.5,5.2-6.5c-1.7-1.7-3.1-3.8-4.1-6.2c-1-2.4-1.6-5.4-1.6-9c0-3.8,0.7-7.3,2-10.3c1.4-3,3.2-5.6,5.7-7.7
+                                    c2.4-2.1,5.3-3.7,8.7-4.8c3.4-1.1,7.1-1.7,11.1-1.7c2.1,0,4.1,0.1,6,0.4c1.9,0.2,3.7,0.6,5.3,1h20.9c0.8,0,1.5,0.5,2,1.6
+                                    C458,258.4,458.2,260.3,458.2,262.8z M438.7,331.1c0-2.2-0.9-3.9-2.7-5.1c-1.8-1.2-4.2-1.8-7.3-1.9l-13.2-0.4
+                                    c-1.3,0.9-2.3,1.8-3.1,2.7c-0.8,0.9-1.4,1.7-1.8,2.5c-0.5,0.8-0.8,1.6-0.9,2.3c-0.1,0.7-0.2,1.5-0.2,2.3c0,2.5,1.2,4.3,3.7,5.6
+                                    c2.5,1.3,6,1.9,10.5,1.9c2.8,0,5.2-0.3,7.1-0.9c1.9-0.6,3.5-1.3,4.7-2.3c1.2-0.9,2-2,2.5-3.1C438.5,333.6,438.7,332.4,438.7,331.1
+                                    z M434.4,278.4c0-3.5-1-6.3-3-8.3c-2-2-4.8-3-8.4-3c-1.8,0-3.4,0.3-4.8,0.9c-1.4,0.6-2.5,1.5-3.4,2.5c-0.9,1.1-1.6,2.3-2,3.7
+                                    c-0.4,1.4-0.7,2.9-0.7,4.4c0,3.4,1,6,3,8c2,1.9,4.7,2.9,8.2,2.9c1.9,0,3.5-0.3,4.9-0.9c1.4-0.6,2.5-1.4,3.4-2.4
+                                    c0.9-1,1.6-2.2,2.1-3.6C434.1,281.3,434.4,279.9,434.4,278.4z"/>
+            <path class="st0" d="M533.6,324.2c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9c-0.7,0.2-1.6,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2
+                                    c-1.8,0-3.3-0.1-4.5-0.2c-1.2-0.1-2.2-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9c-0.3-0.4-0.4-0.8-0.4-1.3v-37.7
+                                    c0-3.2-0.2-5.7-0.7-7.5c-0.5-1.8-1.1-3.4-2-4.7c-0.9-1.3-2-2.3-3.4-3c-1.4-0.7-3-1.1-4.9-1.1c-2.4,0-4.8,0.9-7.2,2.6
+                                    c-2.4,1.7-4.9,4.2-7.5,7.5v43.9c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9c-0.7,0.2-1.7,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2
+                                    c-1.8,0-3.3-0.1-4.5-0.2c-1.2-0.1-2.1-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9s-0.4-0.8-0.4-1.3v-97.3c0-0.5,0.1-0.9,0.4-1.3
+                                    c0.3-0.4,0.8-0.7,1.5-1c0.7-0.3,1.7-0.5,2.8-0.6c1.2-0.1,2.7-0.2,4.5-0.2c1.8,0,3.3,0.1,4.5,0.2c1.2,0.1,2.1,0.4,2.8,0.6
+                                    c0.7,0.3,1.2,0.6,1.5,1c0.3,0.4,0.4,0.8,0.4,1.3v36.5c3.2-3.2,6.5-5.5,9.8-7.1c3.3-1.6,6.8-2.3,10.4-2.3c4.5,0,8.3,0.7,11.4,2.2
+                                    s5.6,3.5,7.5,6.1c1.9,2.6,3.3,5.6,4.1,9c0.8,3.4,1.3,7.6,1.3,12.5V324.2z"/>
+            <path class="st0" d="M589.5,317.7c0,2.2-0.1,3.8-0.4,5c-0.3,1.2-0.6,2-1.1,2.4c-0.4,0.5-1.1,0.9-2,1.3c-0.9,0.4-1.9,0.7-3,1
+                                    c-1.2,0.3-2.4,0.5-3.8,0.6c-1.4,0.1-2.7,0.2-4.1,0.2c-3.7,0-6.9-0.5-9.6-1.4c-2.7-0.9-5-2.4-6.7-4.3s-3.1-4.4-3.9-7.4
+                                    c-0.8-3-1.3-6.5-1.3-10.5v-33.8h-7.9c-0.9,0-1.7-0.6-2.1-1.7c-0.5-1.2-0.7-3.1-0.7-5.8c0-1.4,0.1-2.6,0.2-3.6
+                                    c0.1-1,0.3-1.8,0.6-2.3c0.2-0.6,0.6-1,0.9-1.2c0.4-0.2,0.8-0.4,1.3-0.4h7.8V241c0-0.5,0.1-0.9,0.4-1.3c0.3-0.4,0.8-0.7,1.5-1
+                                    c0.7-0.3,1.7-0.5,2.9-0.6c1.2-0.1,2.7-0.2,4.5-0.2c1.8,0,3.3,0.1,4.5,0.2c1.2,0.1,2.2,0.3,2.8,0.6c0.7,0.3,1.2,0.6,1.5,1
+                                    c0.3,0.4,0.4,0.8,0.4,1.3v14.7h14.3c0.5,0,0.9,0.1,1.3,0.4c0.4,0.2,0.7,0.7,0.9,1.2c0.2,0.6,0.4,1.3,0.6,2.3
+                                    c0.1,1,0.2,2.2,0.2,3.6c0,2.7-0.2,4.6-0.7,5.8c-0.5,1.2-1.2,1.7-2.1,1.7h-14.4v31c0,3.6,0.6,6.3,1.7,8.1c1.1,1.8,3.2,2.7,6.1,2.7
+                                    c1,0,1.9-0.1,2.7-0.3c0.8-0.2,1.5-0.4,2.1-0.6c0.6-0.2,1.1-0.4,1.6-0.6s0.8-0.3,1.1-0.3c0.3,0,0.6,0.1,0.9,0.3
+                                    c0.3,0.2,0.5,0.5,0.6,1c0.1,0.5,0.3,1.2,0.4,2.1C589.5,315.2,589.5,316.3,589.5,317.7z"/>
+            <path class="st0" d="M649.5,305.6c0,3.7-0.7,7.1-2.1,9.9c-1.4,2.9-3.4,5.3-6,7.2c-2.6,1.9-5.6,3.4-9.1,4.3
+                                    c-3.5,1-7.3,1.4-11.4,1.4c-2.5,0-4.8-0.2-7.1-0.6c-2.2-0.4-4.3-0.8-6-1.4c-1.8-0.6-3.3-1.1-4.4-1.7s-2-1.1-2.6-1.7
+                                    c-0.5-0.5-1-1.3-1.3-2.4s-0.4-2.7-0.4-4.9c0-1.4,0-2.6,0.1-3.4c0.1-0.9,0.2-1.6,0.4-2.1c0.2-0.5,0.4-0.9,0.7-1s0.7-0.3,1.1-0.3
+                                    c0.5,0,1.3,0.3,2.4,0.9c1.1,0.6,2.4,1.3,4,2c1.6,0.7,3.4,1.4,5.5,2.1c2.1,0.6,4.5,1,7.1,1c1.7,0,3.2-0.2,4.5-0.5s2.4-0.8,3.4-1.5
+                                    c1-0.6,1.7-1.5,2.2-2.4c0.5-1,0.7-2.1,0.7-3.4c0-1.5-0.5-2.7-1.4-3.8c-0.9-1.1-2.1-2-3.6-2.8c-1.5-0.8-3.2-1.5-5.1-2.2
+                                    c-1.9-0.7-3.8-1.5-5.8-2.3c-2-0.8-3.9-1.8-5.8-2.9c-1.9-1.1-3.6-2.4-5.1-4c-1.5-1.6-2.7-3.5-3.6-5.7c-0.9-2.2-1.4-4.9-1.4-8
+                                    c0-3.2,0.6-6.1,1.8-8.7c1.2-2.6,3-4.9,5.3-6.8c2.3-1.9,5.1-3.3,8.5-4.4c3.3-1,7.1-1.6,11.2-1.6c2.1,0,4.1,0.1,6,0.4
+                                    c1.9,0.3,3.7,0.7,5.3,1.1c1.6,0.4,2.9,0.9,4,1.4c1.1,0.5,1.9,1,2.3,1.3c0.5,0.4,0.8,0.7,1,1.1c0.2,0.4,0.3,0.8,0.4,1.3
+                                    c0.1,0.5,0.2,1.2,0.3,1.9c0.1,0.8,0.1,1.7,0.1,2.8c0,1.3,0,2.4-0.1,3.3c-0.1,0.8-0.2,1.5-0.4,2c-0.2,0.5-0.4,0.8-0.7,1
+                                    c-0.3,0.2-0.6,0.3-1,0.3c-0.4,0-1.1-0.3-2.1-0.8c-0.9-0.5-2.1-1.1-3.5-1.7s-3-1.1-4.9-1.7c-1.8-0.5-4-0.8-6.3-0.8
+                                    c-1.7,0-3.1,0.2-4.4,0.5c-1.2,0.3-2.2,0.8-3,1.5c-0.8,0.6-1.4,1.4-1.8,2.3c-0.4,0.9-0.6,1.8-0.6,2.8c0,1.5,0.5,2.8,1.4,3.8
+                                    c0.9,1,2.2,1.9,3.7,2.7c1.5,0.8,3.3,1.5,5.2,2.2s3.9,1.4,5.9,2.3s4,1.8,5.9,2.8c1.9,1.1,3.7,2.4,5.2,4c1.5,1.6,2.8,3.5,3.7,5.7
+                                    C649,300,649.5,302.6,649.5,305.6z"/>
+            <path class="st0" d="M726.5,324.2c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9c-0.7,0.2-1.6,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2
+                                    c-1.8,0-3.3-0.1-4.5-0.2c-1.2-0.1-2.2-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9s-0.4-0.8-0.4-1.3v-37.7c0-3.2-0.2-5.7-0.7-7.5
+                                    c-0.5-1.8-1.1-3.4-2-4.7c-0.9-1.3-2-2.3-3.4-3c-1.4-0.7-3-1.1-4.9-1.1c-2.4,0-4.8,0.9-7.2,2.6c-2.4,1.7-4.9,4.2-7.5,7.5v43.9
+                                    c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9c-0.7,0.2-1.7,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2c-1.8,0-3.3-0.1-4.5-0.2
+                                    c-1.2-0.1-2.1-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9s-0.4-0.8-0.4-1.3v-97.3c0-0.5,0.1-0.9,0.4-1.3c0.3-0.4,0.8-0.7,1.5-1
+                                    c0.7-0.3,1.7-0.5,2.8-0.6c1.2-0.1,2.7-0.2,4.5-0.2c1.8,0,3.3,0.1,4.5,0.2c1.2,0.1,2.1,0.4,2.8,0.6c0.7,0.3,1.2,0.6,1.5,1
+                                    c0.3,0.4,0.4,0.8,0.4,1.3v36.5c3.2-3.2,6.5-5.5,9.8-7.1c3.3-1.6,6.8-2.3,10.4-2.3c4.5,0,8.3,0.7,11.4,2.2c3.1,1.5,5.6,3.5,7.5,6.1
+                                    c1.9,2.6,3.3,5.6,4.1,9c0.8,3.4,1.3,7.6,1.3,12.5V324.2z"/>
+            <path class="st0" d="M800.9,324.4c0,0.7-0.2,1.2-0.7,1.6c-0.5,0.4-1.3,0.7-2.3,0.9s-2.6,0.3-4.7,0.3c-2.2,0-3.8-0.1-4.8-0.3
+                                    c-1-0.2-1.7-0.5-2.1-0.9c-0.4-0.4-0.6-0.9-0.6-1.6v-5.3c-2.7,2.9-5.8,5.2-9.3,6.8c-3.5,1.6-7.3,2.4-11.6,2.4
+                                    c-3.5,0-6.7-0.5-9.7-1.4c-2.9-0.9-5.5-2.3-7.6-4.1c-2.1-1.8-3.8-4-5-6.7c-1.2-2.7-1.8-5.8-1.8-9.3c0-3.8,0.8-7.2,2.3-10
+                                    c1.5-2.8,3.7-5.2,6.7-7c3-1.8,6.7-3.2,11.1-4.1c4.4-0.9,9.6-1.3,15.5-1.3h6.4v-4c0-2.1-0.2-3.9-0.6-5.4c-0.4-1.6-1.1-2.8-2.1-3.9
+                                    c-1-1-2.2-1.8-3.8-2.3c-1.6-0.5-3.6-0.7-6-0.7c-3.1,0-5.9,0.3-8.3,1c-2.4,0.7-4.6,1.5-6.5,2.3c-1.9,0.8-3.4,1.6-4.7,2.3
+                                    c-1.3,0.7-2.3,1-3.1,1c-0.5,0-1-0.2-1.4-0.5c-0.4-0.3-0.8-0.8-1-1.5c-0.3-0.6-0.5-1.4-0.6-2.4c-0.1-0.9-0.2-2-0.2-3.1
+                                    c0-1.5,0.1-2.7,0.4-3.6c0.2-0.9,0.7-1.7,1.4-2.4c0.7-0.7,1.9-1.5,3.6-2.4c1.7-0.9,3.7-1.7,6.1-2.4c2.3-0.7,4.8-1.3,7.6-1.8
+                                    c2.7-0.5,5.6-0.7,8.5-0.7c5.2,0,9.6,0.5,13.3,1.5c3.7,1,6.7,2.6,9.1,4.7c2.4,2.1,4.1,4.8,5.2,8.1c1.1,3.3,1.6,7.2,1.6,11.8V324.4z
+                                     M782.7,296.2h-7.1c-3,0-5.6,0.2-7.7,0.7c-2.1,0.4-3.8,1.1-5.2,2c-1.3,0.9-2.3,2-2.9,3.2c-0.6,1.3-0.9,2.7-0.9,4.3
+                                    c0,2.8,0.9,4.9,2.6,6.5c1.8,1.6,4.2,2.4,7.3,2.4c2.6,0,5-0.7,7.2-2c2.2-1.3,4.4-3.3,6.7-5.8V296.2z"/>
+            <path class="st0" d="M861.9,264.4c0,1.8,0,3.2-0.1,4.4c-0.1,1.1-0.2,2-0.4,2.7c-0.2,0.6-0.5,1.1-0.8,1.3c-0.3,0.2-0.7,0.4-1.2,0.4
+                                    c-0.4,0-0.8-0.1-1.3-0.3s-1-0.4-1.7-0.6c-0.6-0.2-1.3-0.4-2-0.6c-0.7-0.2-1.6-0.3-2.4-0.3c-1,0-2.1,0.2-3.1,0.6
+                                    c-1,0.4-2.1,1.1-3.2,2c-1.1,0.9-2.3,2.1-3.5,3.6c-1.2,1.5-2.5,3.3-3.9,5.5v41.1c0,0.5-0.1,0.9-0.4,1.3s-0.8,0.7-1.5,0.9
+                                    c-0.7,0.2-1.7,0.4-2.8,0.6c-1.2,0.1-2.7,0.2-4.5,0.2c-1.8,0-3.3-0.1-4.5-0.2c-1.2-0.1-2.1-0.3-2.8-0.6c-0.7-0.2-1.2-0.6-1.5-0.9
+                                    s-0.4-0.8-0.4-1.3v-66c0-0.5,0.1-0.9,0.4-1.3c0.2-0.4,0.7-0.7,1.3-0.9c0.6-0.2,1.5-0.4,2.5-0.6c1-0.1,2.3-0.2,3.8-0.2
+                                    c1.6,0,2.9,0.1,3.9,0.2c1,0.1,1.8,0.3,2.4,0.6c0.6,0.2,1,0.6,1.2,0.9c0.2,0.4,0.4,0.8,0.4,1.3v8.2c1.7-2.5,3.4-4.5,4.9-6.1
+                                    s3-2.9,4.4-3.8c1.4-0.9,2.8-1.6,4.1-2c1.4-0.4,2.8-0.6,4.1-0.6c0.6,0,1.3,0,2.1,0.1c0.7,0.1,1.5,0.2,2.3,0.4
+                                    c0.8,0.2,1.5,0.4,2.1,0.6c0.6,0.2,1,0.5,1.3,0.7c0.3,0.2,0.5,0.5,0.6,0.8c0.1,0.3,0.2,0.7,0.3,1.2c0.1,0.5,0.2,1.3,0.2,2.3
+                                    C861.9,261.2,861.9,262.6,861.9,264.4z"/>
+            <path class="st0" d="M932.6,289.3c0,2.3-0.5,3.9-1.5,5s-2.4,1.6-4.2,1.6h-40.2c0,2.8,0.3,5.4,1,7.7c0.7,2.3,1.7,4.2,3.2,5.8
+                                    c1.5,1.6,3.3,2.8,5.6,3.7c2.3,0.8,5,1.3,8.2,1.3c3.3,0,6.1-0.2,8.6-0.7c2.5-0.5,4.6-1,6.4-1.6c1.8-0.6,3.3-1.1,4.5-1.6
+                                    s2.1-0.7,2.9-0.7c0.4,0,0.8,0.1,1.1,0.3c0.3,0.2,0.5,0.5,0.7,0.9s0.3,1.1,0.4,1.9c0.1,0.8,0.1,1.8,0.1,3.1c0,1.1,0,2-0.1,2.8
+                                    c0,0.8-0.1,1.4-0.2,2c-0.1,0.5-0.2,1-0.4,1.4c-0.2,0.4-0.5,0.7-0.8,1.1c-0.3,0.3-1.2,0.8-2.6,1.4c-1.4,0.6-3.3,1.2-5.5,1.7
+                                    c-2.2,0.6-4.8,1.1-7.6,1.5c-2.9,0.4-5.9,0.6-9.2,0.6c-5.9,0-11-0.7-15.4-2.2c-4.4-1.5-8.1-3.7-11.1-6.7c-3-3-5.2-6.8-6.6-11.4
+                                    c-1.5-4.6-2.2-10-2.2-16.1c0-5.9,0.8-11.2,2.3-15.9c1.5-4.7,3.7-8.7,6.7-12c2.9-3.3,6.4-5.8,10.6-7.5c4.2-1.7,8.9-2.6,14.1-2.6
+                                    c5.5,0,10.2,0.8,14.2,2.4c3.9,1.6,7.1,3.9,9.7,6.8c2.5,2.9,4.4,6.3,5.5,10.2c1.2,3.9,1.8,8.2,1.8,12.9V289.3z M914.6,284
+                                    c0.1-5.2-0.9-9.3-3.1-12.3c-2.2-3-5.7-4.5-10.4-4.5c-2.4,0-4.4,0.4-6.2,1.3c-1.8,0.9-3.2,2.1-4.4,3.6c-1.2,1.5-2,3.3-2.7,5.3
+                                    c-0.6,2-1,4.2-1.1,6.5H914.6z"/>
+                            </g>
+                            </g>
+                    </svg>
       <span class="sr-only">Sign Up</span>
     </h1>
-    <p>Already have an account? Please <a href="#" th:href="@{/login}">log in.</a></p>
+    <p>Already have an account? Please <a href="#" th:href="@{/login}">Log In.</a></p>
   </header>
   <!-- form -->
   <form class="auth-form" action="#"  method="POST" th:object="${user}" th:action="@{/register}">
