Make account settings for "testuser" immutable, Add Disclaimer

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -159,6 +159,10 @@
     </form>
     <!-- /.auth-form -->
 
+    <!-- disclaimer -->
+    <br>
+    <p class="text-primary">Disclaimer: This project is still in development and is only intended for test use. </p>
+    <!-- /disclaimer -->
     <!-- copyright -->
     <footer class="auth-footer">&copy; <span th:text="${#dates.format(#dates.createNow(), 'yyyy.')}"></span> All Rights Reserved.</footer>
 </main>
